--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,10 +31,65 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
+    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+
+    <script>
+        /**
+         * System configuration for Angular 2 samples
+         * Adjust as necessary for your application needs.
+         */
+        (function(global) {
+          // map tells the System loader where to look for things
+          var map = {
+            'app':                        './assets/app', // 'dist',
+            '@angular':                   './node_modules/@angular',
+            'angular2-in-memory-web-api': './node_modules/angular2-in-memory-web-api',
+            'rxjs':                       '/.node_modules/rxjs'
+          };
+          // packages tells the System loader how to load when no filename and/or no extension
+          var packages = {
+            'app':                        { main: 'main.js',  defaultExtension: 'js' },
+            'rxjs':                       { defaultExtension: 'js' },
+            'angular2-in-memory-web-api': { main: 'index.js', defaultExtension: 'js' },
+          };
+          var ngPackageNames = [
+            'common',
+            'compiler',
+            'core',
+            'forms',
+            'http',
+            'platform-browser',
+            'platform-browser-dynamic',
+            'router',
+            'upgrade',
+          ];
+          // Individual files (~300 requests):
+          function packIndex(pkgName) {
+            packages['@angular/'+pkgName] = { main: 'index.js', defaultExtension: 'js' };
+          }
+          // Bundled (~40 requests):
+          function packUmd(pkgName) {
+            packages['@angular/'+pkgName] = { main: '/bundles/' + pkgName + '.umd.js', defaultExtension: 'js' };
+          }
+          // Most environments should use UMD; some (Karma) need the individual index files
+          var setPackageConfig = System.packageWithIndex ? packIndex : packUmd;
+          // Add package entries for angular packages
+          ngPackageNames.forEach(setPackageConfig);
+          var config = {
+            map: map,
+            packages: packages
+          };
+          System.config(config);
+          System.import('app').catch(function(err){ console.error(err); });
+        })(this);
+    </script>
   </head>
 
   <body>
-    <%- body %>
+    <my-app>Loading...</my-app>
 
 
 
@@ -60,7 +115,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
